--- a/src/styles/journal.module.css
+++ b/src/styles/journal.module.css
@@ -278,7 +278,6 @@
             }
 
             a {
-                text-decoration: none;
                 color: var(--dark-link-colour);
             }
         }
